GNU C Library NEWS -- history of user-visible changes.
Copyright (C) 1992-2021 Free Software Foundation, Inc.
See the end for copying conditions.

Please send GNU C library bug reports via <https://sourceware.org/bugzilla/>
using `glibc' in the "product" field.

Version 2.34.1

Deprecated and removed features, and other changes affecting compatibility:

* The function getdirentries is now deprecated, applications should use
  either getdents64, readdir64 or readdir.

Security related changes:

  CVE-2022-23219: Passing an overlong file name to the clnt_create
  legacy function could result in a stack-based buffer overflow when
  using the "unix" protocol.  Reported by Martin Sebor.

  CVE-2022-23218: Passing an overlong file name to the svcunix_create
  legacy function could result in a stack-based buffer overflow.

  CVE-2021-3998: Passing a path longer than PATH_MAX to the realpath
  function could result in a memory leak and potential access of
  uninitialized memory.  Reported by Qualys.

  CVE-2021-3999: Passing a buffer of size exactly 1 byte to the getcwd
  function may result in an off-by-one buffer underflow and overflow
  when the current working directory is longer than PATH_MAX and also
  corresponds to the / directory through an unprivileged mount
  namespace.  Reported by Qualys.

The following bugs are resolved with this release:

  [12889] nptl: Fix race between pthread_kill and thread exit
  [19193] nptl: pthread_kill, pthread_cancel should not fail after exit
  [22542] CVE-2022-23219: Buffer overflow in sunrpc clnt_create for "unix"
  [28036] Incorrect types for pthread_mutexattr_set/getrobust_np
  [28182] _TIME_BITS=64 in C++ has issues with fcntl, ioctl, prctl
  [28223] mips: clone does not align stack
  [28310] Do not use affinity mask for sysconf (_SC_NPROCESSORS_CONF)
  [28338] undefined behavior in __tzfile_compute with oddball TZif file
  [28340] ld.so crashes while loading a DSO with a read-only dynamic section